# docs/swagger.json
@@ -7,6 +7,19 @@
         "version": "1.0"
     },
     "paths": {
+        "/ping": {
+            "get": {
+                "tags": [
+                    "ping"
+                ],
+                "summary": "Проверка сервиса",
+                "responses": {
+                    "200": {
+                        "description": "pong"
+                    }
+                }
+            }
+        },
         "/product/{productId}": {
             "delete": {
                 "security": [
